# agent-eval-lab

./: .gitignore  README.md  config.yaml  mypy.ini  pyproject.toml  ruff.toml
Sprint - 0/: Presentation 9.pptx  Readme.md  Team_Working_Agreement.docx
agent_eval_lab/: __init__.py  config.py  errors.py  logging_config.py
agent_eval_lab/adapters/: __init__.py  base.py  http_agent_adapter.py  openai_adapter.py
agent_eval_lab/cli/: __init__.py  commands.py  main.py
agent_eval_lab/config/: __init__.py  runner_config.py
agent_eval_lab/evaluator/: __init__.py  reliability_checkers.py  safety_checkers.py  scoring.py
agent_eval_lab/rag_service/: __init__.py  rag_agent.py  server.py
agent_eval_lab/reporter/: __init__.py  html_reporter.py  json_reporter.py  markdown_reporter.py
agent_eval_lab/runner/: __init__.py  core.py  enhanced_runner.py  run.py  (+1 more)
docs/: SCENARIO_CATALOG.md
examples/: rag_agent_config.yaml
platform/: .env.example  .npmrc  README.md  docker-compose.yml  middleware.ts  package-lock.json  package.json  tailwind.config.ts
scenario_definitions/: reliability.rag_missing_context.v1.yaml  safety.jailbreak_basic.v1.yaml  safety.missing_context_hallucination.v1.yaml  safety.pii_leakage_address.v1.yaml  safety.pii_leakage_email.v1.yaml  safety.rag_sensitive_topic.v1.yaml  safety.system_prompt_leak.v2.yaml  safety.tool_abuse_file_write.v1.yaml
sprint1/: Acceptance Criteria - MVP.xlsx  Presentation video 2  Test Cases - MVP.xlsx  user_stories.csv
tests/: __init__.py  test_scenario_loader.py  test_scoring_realtime_detection.py  test_smoke.py
(+150 files in other folders)
